# rinnsal

./: .gitignore  CHANGELOG.md  LOCK.txt  README.md  README_de.md  llms.txt  pyproject.toml  rinnsal.spec
.github/workflows/: tests.yml
chains/: example.json
config/: connectors.example.json  rinnsal.example.json
docs/: architecture.md  automation.md  connectors.md  memory.md
rinnsal/: __init__.py  __main__.py  cli.py
rinnsal/auto/: __init__.py  chain.py  chain_creator.py  config.py  ollama_runner.py  runner.py  state.py
rinnsal/connectors/: __init__.py  base.py  config.py  discord.py  homeassistant.py  telegram.py
rinnsal/i18n/: __init__.py
rinnsal/i18n/locales/: translations.json
rinnsal/memory/: __init__.py  api.py  client.py  schema.py
rinnsal/shared/: __init__.py  config.py  events.py
rinnsal/tasks/: __init__.py  _bundled.py  api.py  client.py
tests/: test_auto.py  test_connectors.py  test_i18n.py  test_integration.py  test_memory.py  test_shared_config.py  test_tasks.py
