[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rinnsal"
version = "0.1.0"
description = "Lightweight LLM agent infrastructure: Memory, Connectors, Automation. Extracted from BACH."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{name = "Lukas Geiger"}]
keywords = ["llm", "agent", "memory", "automation", "infrastructure"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/lukisch/rinnsal"
Repository = "https://github.com/lukisch/rinnsal"

[project.scripts]
rinnsal = "rinnsal.cli:main"

[tool.setuptools.packages.find]
include = ["rinnsal*"]
