[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rinnsal"
version = "0.1.0"
description = "Lightweight local-first LLM agent infrastructure: SQLite memory, tasks, connectors, and chain automation."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{name = "Lukas Geiger"}]
keywords = ["llm", "agent", "agent-memory", "sqlite", "automation", "connectors", "local-first", "ollama", "infrastructure"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/ellmos-ai/rinnsal"
Repository = "https://github.com/ellmos-ai/rinnsal"
Documentation = "https://github.com/ellmos-ai/rinnsal#readme"
Issues = "https://github.com/ellmos-ai/rinnsal/issues"

[project.scripts]
rinnsal = "rinnsal.cli:main"

[tool.setuptools.packages.find]
include = ["rinnsal*"]
