[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "rinnsal"
dynamic = ["version"]
description = "Lightweight local-first LLM agent infrastructure: SQLite memory, tasks, connectors, and chain automation."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{name = "Lukas Geiger"}]
keywords = ["llm", "agent", "agent-memory", "sqlite", "automation", "connectors", "local-first", "ollama", "infrastructure"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/ellmos-ai/rinnsal"
Repository = "https://github.com/ellmos-ai/rinnsal"
Documentation = "https://github.com/ellmos-ai/rinnsal#readme"
Issues = "https://github.com/ellmos-ai/rinnsal/issues"

[project.scripts]
rinnsal = "rinnsal.cli:main"

[tool.setuptools.dynamic]
version = {attr = "rinnsal.__version__"}

[tool.setuptools.packages.find]
include = ["rinnsal*"]

[tool.setuptools.package-data]
"rinnsal.i18n" = ["locales/*.json"]
